--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.15.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -24,6 +25,7 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.2",
+    "@types/pg": "^8.11.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
