--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.8.1",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
